--- a/MECS/Chapter 1.csproj
+++ b/MECS/Chapter 1.csproj
@@ -32,7 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>MECS.Chapter1.Item1.Program</StartupObject>
+    <StartupObject>MECS.Chapter1.Item3.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Item 1.cs" />
     <Compile Include="Item 2.cs" />
+    <Compile Include="Item 3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
