--- a/MECS/Chapter 1.csproj
+++ b/MECS/Chapter 1.csproj
@@ -32,7 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>MECS.Chapter1.Item6.Program</StartupObject>
+    <StartupObject>MECS.Chapter1.Item7.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -51,6 +51,7 @@
     <Compile Include="Item 4.cs" />
     <Compile Include="Item 5.cs" />
     <Compile Include="Item 6.cs" />
+    <Compile Include="Item 7.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
