--- a/MECS/Chapter 1.csproj
+++ b/MECS/Chapter 1.csproj
@@ -32,7 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>MECS.Chapter1.Item8.Program</StartupObject>
+    <StartupObject>MECS.Chapter1.Item9.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -53,6 +53,7 @@
     <Compile Include="Item 6.cs" />
     <Compile Include="Item 7.cs" />
     <Compile Include="Item 8.cs" />
+    <Compile Include="Item 9.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
