--- a/MECS/Chapter 1.csproj
+++ b/MECS/Chapter 1.csproj
@@ -32,7 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>MECS.Chapter1.Item9.Program</StartupObject>
+    <StartupObject>MECS.Chapter1.Item10.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Item 1.cs" />
+    <Compile Include="Item 10.cs" />
     <Compile Include="Item 2.cs" />
     <Compile Include="Item 3.cs" />
     <Compile Include="Item 4.cs" />
